<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item android:id="@+id/nav_status"
            android:icon="@drawable/ic_status"
            android:title="@string/status"/>
        <item android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"/>
        <item android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
            <item android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>