<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:padding="5dp">
    <!--
    items for a single row of RecyclerView
    -->

    <Button
        android:id="@+id/list_booknow"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/list_id"
        android:background="@drawable/round_home_seach_success"
        android:text="@string/book_now"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/list_id"
        android:text="@string/_9_00_10_00"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/list_seat"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_toEndOf="@+id/list_id"
        android:text="@string/seats_12"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@+id/list_id"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@+id/list_id"
        android:text="@string/bus_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/list_id"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/abcd"
        android:textColor="#000"
        android:textSize="20sp" />

</RelativeLayout>